<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_profile"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               android:layout_margin="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:layout_marginTop="10dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/profile_name"
                                    android:textColor="@color/black"
                                    android:textSize="18sp" />

                                <TextView
                                    android:id="@+id/textView_name_profile"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="2dp"
                                    android:text=""
                                    android:textColor="@color/gray_text"
                                    android:textSize="18sp" />

                            </LinearLayout>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/gray_text" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:layout_marginTop="10dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/profile_email"
                                    android:textColor="@color/black"
                                    android:textSize="18sp" />

                                <TextView
                                    android:id="@+id/textView_email_profile"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:text=""
                                    android:textColor="@color/gray_text"
                                    android:textSize="18sp" />

                            </LinearLayout>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/gray_text" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp"
                                android:layout_marginTop="10dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/profile_phone"
                                    android:textColor="@color/black"
                                    android:textSize="18sp" />

                                <TextView
                                    android:id="@+id/textView_phone_profile"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:text=""
                                    android:textColor="@color/gray_text"
                                    android:textSize="18sp" />

                            </LinearLayout>


                        </LinearLayout>

                        <Button
                            android:id="@+id/button_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/button_blue_backgrount"
                            android:paddingLeft="40dp"
                            android:paddingRight="40dp"
                            android:text="@string/profile_edit"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>